# elgato-preview-activator

./: .gitmodules  AVICapture.mm  CMakeLists.txt  EGPreviewActivator.mm
